feat: configura ALLOWED_ORIGINS via variável de ambiente no CORS
Substitui a lista hardcoded de origins pela variável ALLOWED_ORIGINS,
com padrão http://localhost:4200 para desenvolvimento local.
Em produção, define ALLOWED_ORIGINS no ambiente com as URLs permitidas,
separadas por vírgula.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>